--- a/index.html
+++ b/index.html
@@ -42,49 +42,8 @@
         <h2>Meet Us</h2>
       </div>
       <div>
-        <ul>
-          <li>
-            <div class="coder">
-              <figure><img src="assets/img/students/1.png" alt="1" class="image">
-                  <figcaption><span class="nombre">Fiorella Quispe</span></figcaption>
-              </figure>
-            </div>
-          </li>
-          <li>
-            <div class="coder">
-              <figure><img src="assets/img/students/2.png" alt="2" class="image">
-                  <figcaption><span class="nombre">Lourdes Vilchez</span></figcaption>
-              </figure>
-            </div>
-          </li>
-          <li>
-            <div class="coder">
-              <figure><img src="assets/img/students/3.png" alt="3" class="image">
-                  <figcaption><span class="nombre">Rossmery Maldonado</span></figcaption>
-              </figure>
-            </div>
-          </li>
-          <li>
-            <div class="coder">
-              <figure><img src="assets/img/students/4.png" alt="4" class="image">
-                  <figcaption><span class="nombre">Yessenia</span></figcaption>
-              </figure>
-            </div>
-          </li>
-          <li>
-            <div class="coder">
-              <figure><img src="assets/img/students/5.png" alt="3" class="image">
-                  <figcaption><span class="nombre">Miriam Peralta</span></figcaption>
-              </figure>
-            </div>
-          </li>
-          <li>
-            <div class="coder">
-              <figure><img src="assets/img/students/3.png" alt="3" class="image">
-                  <figcaption><span class="nombre">Elizabeth Condori</span></figcaption>
-              </figure>
-            </div>
-          </li>
+        <ul id="lista">
+          
         </ul>
       </div>
     </section>
