--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
       <div class="titulo">
         <h2>Meet Us</h2>
       </div>
-      <div>
+      <div id="contenedor">
         <ul id="lista">
-          
+
         </ul>
       </div>
+      <footer id="pie">
+        <img src="assets/img/logo-blanco.png" alt="logo de Laboratoria">
+      </footer>
     </section>
 <script src="assets/js/students.js" charset="utf-8"></script>
 <script src="assets/js/app.js" charset="utf-8"></script>
