--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
     </header>
     <!--main-nav-->
     <section id="fotos">
+      <div id="maquina">
+        <div class="write">
+          <h2 id="msj">var strongWomen = "We want to change the world";<span>&#160;</span></h2>
+        </div>
+      </div>
       <div class="titulo">
         <h2>Meet Us</h2>
       </div>
