--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" type="image/png" sizes="32x32" href="http://laboratoria.la/app/assets/img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="32x32" href="http://laboratoria.la/app/assets/img/logo_laboratoria-09.svg">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/students.css">
